--- a/src/style/_objects.card.less
+++ b/src/style/_objects.card.less
@@ -50,7 +50,10 @@
   font-family: @heading-font;
 
   font-size: 1.5rem;
-  font-weight: bold;
+  font-weight: 400;
 }
 
+.card__content {
+  font-weight: 400;
+}
 
