--- a/src/style/_elements.blockquote.less
+++ b/src/style/_elements.blockquote.less
@@ -1,7 +1,7 @@
 blockquote {
 
   &.letter {
-    font-family: 'Pfeffer Mediaeval', cursive;
+    font-family: var(--medieval-font);
     font-feature-settings: "hist", "ss02";
     font-kerning: normal;
   }
@@ -10,7 +10,7 @@ blockquote {
   border-right: 1px solid;
   border-color: @palette-dark-grey;
   background-color: @palette-light-grey;
-  
+
   padding-top: 0.8rem;
   padding-bottom: 1rem;
 
@@ -25,4 +25,3 @@ blockquote {
   }
 
 }
-
