--- a/src/style/_elements.links.less
+++ b/src/style/_elements.links.less
@@ -1,6 +1,6 @@
 a {
   &:link, &:visited {
-    font-family: @heading-font;
+    font-family: var(--display-font);
     font-weight: 700;
     color: @palette-primary-dark;
     text-decoration: none;
