--- a/src/style/_elements.lists.less
+++ b/src/style/_elements.lists.less
@@ -17,8 +17,8 @@ ul {
     transform: translateX(-100%);
 
     content: "•";
-    
-    font-size: 0.7rem;
+
+    font-size: var(--font-size-s);
     line-height: 1.8;
   }
 }
@@ -43,4 +43,3 @@ ol {
   }
 
 }
-
