--- a/src/style/main.less
+++ b/src/style/main.less
@@ -1,9 +1,9 @@
 @import '_settings.colors.less';
-@import '_settings.fonts.less';
 @import '_settings.sizes.less';
 
-@import '_generic.font-faces.less';
 @import '_generic.reset.less';
+@import '_generic.font-faces.less';
+@import '_generic.typography.less';
 @import '_generic.shared.less';
 @import '_generic.layout.less';
 
@@ -31,4 +31,3 @@
 @import '_objects.card.less';
 
 @import '_objects.license.less';
-
