--- a/src/style/_elements.headings-direct-link.less
+++ b/src/style/_elements.headings-direct-link.less
@@ -2,7 +2,7 @@
   color: #ffffff;
   text-decoration: none;
 
-  font-size: 0.8em;
+  font-size: var(--font-size-s);
   font-weight: 400;
 
   float: right;
@@ -10,7 +10,7 @@
   padding-left: 0.5em;
 }
 
-:hover > .direct-link { 
+:hover > .direct-link {
   color: @palette-dark-grey;
 }
 
@@ -23,4 +23,3 @@
     display: none;
   }
 }
-
