--- a/src/style/_elements.headings.less
+++ b/src/style/_elements.headings.less
@@ -13,7 +13,7 @@ h2, h3, h4, h5, h6 {
 }
 
 h2, h3 {
-  font-family: @heading-font;
+  font-family: var(--display-font);
   font-variant-caps: small-caps;
   font-weight: 400;
 
@@ -21,19 +21,19 @@ h2, h3 {
 }
 
 h2 {
-  font-size: 1.4rem;
+  font-size: var(--font-size-xl);
 
   margin-top: var(--content-spacing-l);
 }
 
 h3 {
-  font-size: 1.2rem;
+  font-size: var(--font-size-l);
   margin-top: calc(var(--content-spacing) * 4);
 
 }
 
 h4 {
-  font-size: 0.9rem;
+  font-size: var(--font-size-s);
   font-weight: 700;
 
   margin-top: calc(var(--content-spacing) * 2);
