--- a/src/style/_objects.header.less
+++ b/src/style/_objects.header.less
@@ -1,4 +1,3 @@
-@header-font-size: 17vmin;
 @header-padding: 8vmin;
 
 .header {
@@ -14,11 +13,19 @@
   hyphens: none;
 
   background-color: @palette-black;
+
+  @media print {
+    justify-content: flex-end;
+  }
 }
 
 .header__decor-wrapper {
   width: 100%;
   overflow: hidden;
+
+  @media print {
+    display: none;
+  }
 }
 
 .header__wave-decor {
@@ -29,12 +36,20 @@
   height: 30vmin;
 
   overflow: hidden;
+
+  @media print {
+    display: none;
+  }
 }
 
 .header__wave-decor--after {
   fill: @palette-black;
 
   height: 15vmin;
+
+  @media print {
+    display: none;
+  }
 }
 
 .header__hand-decor {
@@ -48,6 +63,10 @@
 
   fill: #ec8686;
   transform: translate(-5vw, 5vh) rotate(-42deg);
+
+  @media print {
+    display: none;
+  }
 }
 
 .header__titling {
@@ -55,7 +74,7 @@
   display: flex;
   flex-direction: column;
 
-  max-width: calc(7.5 * @header-font-size);
+  max-width: calc(7.5 * var(--title-font-size));
   width: calc(100% - 2 * @header-padding);
 
   padding: @header-padding;
@@ -65,8 +84,8 @@
 
 .header__title {
 
-  font-family: @heading-font;
-  font-size: @header-font-size;
+  font-family: var(--display-font);
+  font-size: var(--title-font-size);
   line-height: 1;
 
   position: sticky;
@@ -84,25 +103,13 @@
   margin: 0;
   padding: 0;
 
-  font-family: @heading-font;
-  font-size: 1.6rem;
+  font-family: var(--display-font);
+  font-size: var(--subtitle-font-size);
   font-style: italic;
 
   line-height: 1;
 
   text-align: end;
-}
-
-@media print {
-  .header {
-    height: calc(100vh - 1rem);
-
-    justify-content: flex-end;
-  }
-
-  .header__decor {
-    display: none;
-  }
 }
 
 @media screen and (orientation: portrait) {
