--- a/src/style/_objects.license.less
+++ b/src/style/_objects.license.less
@@ -1,6 +1,6 @@
 .license {
   position: absolute;
-  font-size: 0.8rem;
+  font-size: var(--font-size-xs);
   text-align: right;
 
   max-width: 17rem;
