--- a/src/style/_objects.navigation.less
+++ b/src/style/_objects.navigation.less
@@ -7,10 +7,9 @@
 
 .nav__link {
 
-  font-family: @heading-font;
+  font-family: var(--display-font);
 
-  font-weight: 700;
-  font-size: 1.2rem;
+  font-weight: 600;
   padding-left: 1.2rem;
   padding-right: 1.2rem;
 
@@ -41,8 +40,4 @@
     color: @palette-white;
   }
 
-}
-
-.nav__link--lesser {
-  font-size: 1rem;
 }
