Standardise font weights

--- a/src/style/_elements.headings-direct-link.less
+++ b/src/style/_elements.headings-direct-link.less
@@ -3,7 +3,7 @@
   text-decoration: none;
 
   font-size: var(--font-size-s);
-  font-weight: 400;
+  font-weight: var(--font-weight-normal);
 
   float: right;
   padding-top: 0.22em;
