--- a/src/style/_elements.links.less
+++ b/src/style/_elements.links.less
@@ -1,7 +1,7 @@
 a {
   &:link, &:visited {
     font-family: var(--display-font);
-    font-weight: 700;
+    font-weight: var(--font-weight-bold);
     color: @palette-primary-dark;
     text-decoration: none;
   }
