--- a/src/style/_generic.typography.less
+++ b/src/style/_generic.typography.less
@@ -48,6 +48,12 @@
 }
 
 :root {
+  --font-weight-normal: 400;
+  --font-weight-bold: 600;
+  --font-weight-x-bold: 700;
+}
+
+:root {
   font-size: var(--base-font-size);
 }
 
