--- a/src/style/_objects.card.less
+++ b/src/style/_objects.card.less
@@ -47,9 +47,9 @@
 
   margin-top: 0;
 
-  font-weight: 400;
+  font-weight: var(--font-weight-normal);
 }
 
 .card__content {
-  font-weight: 400;
+  font-weight: var(--font-weight-normal);
 }
