--- a/src/style/_objects.license.less
+++ b/src/style/_objects.license.less
@@ -14,7 +14,7 @@
 .license__work-title {
   a {
     &:link, &:visited {
-      font-weight: 400;
+      font-weight: var(--font-weight-normal);
       font-style: italic;
     }
   }
