--- a/src/style/_elements.headings.less
+++ b/src/style/_elements.headings.less
@@ -15,7 +15,7 @@ h2, h3, h4, h5, h6 {
 h2, h3 {
   font-family: var(--display-font);
   font-variant-caps: small-caps;
-  font-weight: 400;
+  font-weight: var(--font-weight-normal);
 
   letter-spacing: 0.05em;
 }
@@ -34,7 +34,7 @@ h3 {
 
 h4 {
   font-size: var(--font-size-s);
-  font-weight: 700;
+  font-weight: var(--font-weight-x-bold);
 
   margin-top: calc(var(--content-spacing) * 2);
 }
