--- a/src/style/_objects.navigation.less
+++ b/src/style/_objects.navigation.less
@@ -9,7 +9,7 @@
 
   font-family: var(--display-font);
 
-  font-weight: 600;
+  font-weight: var(--font-weight-bold);
   padding-left: 1.2rem;
   padding-right: 1.2rem;
 
