--- a/src/style/_generic.typography.less
+++ b/src/style/_generic.typography.less
@@ -1,3 +1,4 @@
+/* Spacing */
 :root {
   --content-min-margin: @content-min-margin;
   --content-max-width: @content-max-width;
@@ -7,6 +8,7 @@
   --section-spacing: 1.5rem;
 }
 
+/* Fonts families */
 :root {
   --display-font: adobe-garamond-pro, serif;
   --body-font: adobe-garamond-pro, serif;
@@ -14,6 +16,7 @@
   --monospace-font: monospace;
 }
 
+/* Font sizes */
 :root {
 
   --base-font-size: ~"max(100%, 80% + 2vmin)";
@@ -43,16 +46,19 @@
 
 }
 
+/* Line height */
 :root {
   --base-line-height: 1.25;
 }
 
+/* Font weights */
 :root {
   --font-weight-normal: 400;
   --font-weight-bold: 600;
   --font-weight-x-bold: 700;
 }
 
+/* Default typeography */
 :root {
   font-size: var(--base-font-size);
 }
