Add shadows to header

--- a/src/style/_objects.top-drop.less
+++ b/src/style/_objects.top-drop.less
@@ -6,7 +6,7 @@
   left: 50%;
   transform: translateX(-50%);
 
-  height: 3.8rem;
+  filter: drop-shadow(0.1rem 0.1rem 0.2rem rgba(0, 0, 0, 0.2));
 }
 
 .top-drop__group-item {
