--- a/src/style/_objects.header.less
+++ b/src/style/_objects.header.less
@@ -21,18 +21,6 @@
 
 .header__decor-wrapper {
   width: 100%;
-  overflow: hidden;
-
-  @media print {
-    display: none;
-  }
-}
-
-.header__wave-decor {
-  fill: @palette-primary-light;
-
-  width: 50em;
-  min-width: 100%;
   height: 30vmin;
 
   overflow: hidden;
@@ -42,10 +30,36 @@
   }
 }
 
-.header__wave-decor--after {
-  fill: @palette-black;
+.header__decor-wrapper--after {
+  height: 30vmin;
 
-  height: 15vmin;
+  background-color: @palette-black;
+}
+
+.header__wave-decor {
+  fill: @palette-primary-light;
+
+  width: 50em;
+  min-width: 100%;
+  height: 100%;
+
+  overflow: hidden;
+
+  @media print {
+    display: none;
+  }
+
+  filter: drop-shadow(0.3rem 0.2rem 0.3rem rgba(0, 0, 0, 0.15));
+}
+
+.header__wave-decor--after {
+  fill: @palette-white;
+
+  height: 100%;
+
+  filter: drop-shadow(-0.3rem 0.2rem 0.3rem rgba(0, 0, 0, 0.15));
+
+  transform: rotate(180deg);
 
   @media print {
     display: none;
@@ -63,6 +77,8 @@
 
   fill: #ec8686;
   transform: translate(-5vw, 5vh) rotate(-42deg);
+
+  filter: drop-shadow(0.05em 0.1em 0.15em rgba(0, 0, 0, 0.3));
 
   @media print {
     display: none;
@@ -95,7 +111,7 @@
 
   text-align: end;
 
-  text-shadow: 0.02em 0.02em @palette-primary-light;
+  text-shadow: 0.02em 0.02em @palette-primary-light, 0.02em 0.04em 0.07em rgba(0, 0, 0, 0.3);
 
 }
 
@@ -113,6 +129,8 @@
   line-height: 1;
 
   text-align: end;
+
+  text-shadow: 0.05em 0.08em 0.14em rgba(0, 0, 0, 0.3);
 
   &::first-letter {
     font-feature-settings: 'swsh';
