--- a/src/index.njk
+++ b/src/index.njk
@@ -1,7 +1,7 @@
 ---
   layout: home
   title: Carpe DM
-  subtitle: Sieze the Dungeon Master
+  subtitle: Sieze the dungeon master.
 ---
 
 <article class="article">
