Improve header buttons

--- a/src/style/_objects.navigation.less
+++ b/src/style/_objects.navigation.less
@@ -24,8 +24,8 @@
     color: @palette-black;
 
     background-color: @palette-primary-light;
-    border-color: unset;
-    border-width: 0;
+    border-color: lighten(@palette-primary-light, 15%, relative);
+    border-width: 3px;
   }
 
   &:hover {
