Add rounded edges to header nav button

--- a/src/style/_objects.navigation.less
+++ b/src/style/_objects.navigation.less
@@ -25,7 +25,10 @@
 
     background-color: @palette-primary-light;
     border-color: lighten(@palette-primary-light, 15%, relative);
-    border-width: 3px;
+    border-width: 0.15em;
+
+    border-bottom-left-radius: 0.4em;
+    border-bottom-right-radius: 0.4em;
   }
 
   &:hover {
