Improve header nav typography

--- a/src/style/_objects.navigation.less
+++ b/src/style/_objects.navigation.less
@@ -11,6 +11,7 @@
 
   font-weight: var(--font-weight-bold);
   font-size: var(--font-size-s);
+  font-variant-caps: small-caps;
   padding: 0.8em;
 
   display: flex;
