--- a/src/style/_objects.header.less
+++ b/src/style/_objects.header.less
@@ -103,6 +103,7 @@
 .header__title {
 
   font-family: var(--display-font);
+  font-size: var(--title-font-size);
   line-height: 1;
 
   position: sticky;
