--- a/src/style/_objects.navigation.less
+++ b/src/style/_objects.navigation.less
@@ -21,18 +21,25 @@
   text-decoration: none;
 
   &:link, &:visited {
+
+    transition-property: background-color, padding-top;
+    transition-duration: 0.2s;
+    transition-timing-function: ease-in-out;
+
     color: @palette-black;
 
     background-color: @palette-primary-light;
     border-color: lighten(@palette-primary-light, 15%, relative);
+    border-style: solid;
     border-width: 0.15em;
+    border-top-width: 0;
 
     border-bottom-left-radius: 0.4em;
     border-bottom-right-radius: 0.4em;
   }
 
   &:hover {
-    background-color: lighten(@palette-primary-light, 5%, relative);
+    padding-top: 1.2em;
   }
 }
 
