Improve content structure

--- a/src/style/_elements.headings.less
+++ b/src/style/_elements.headings.less
@@ -25,7 +25,7 @@ h2, h3 {
 }
 
 h2 {
-  font-size: var(--font-size-xl);
+  font-size: var(--font-size-l);
 
   margin-top: var(--content-spacing-l);
 
@@ -33,7 +33,7 @@ h2 {
 }
 
 h3 {
-  font-size: var(--font-size-l);
+  font-size: var(--font-size);
   margin-top: calc(var(--content-spacing) * 4);
 }
 
