Add basic table styling

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -21,6 +21,7 @@
 @import '_elements.blockquote.less';
 @import '_elements.images.less';
 @import '_elements.invisible.less';
+@import '_elements.table.less';
 
 @import '_objects.header.less';
 @import '_objects.top-drop.less';
