--- a/src/style/main.less
+++ b/src/style/main.less
@@ -22,7 +22,9 @@
 @import '_elements.images.less';
 @import '_elements.invisible.less';
 @import '_elements.table.less';
+@import '_elements.horizontal-rule.less';
 
+@import '_objects.subheadings.less';
 @import '_objects.header.less';
 @import '_objects.top-drop.less';
 @import '_objects.navigation.less';
