Convert colors to theme

--- a/src/style/_elements.headings-direct-link.less
+++ b/src/style/_elements.headings-direct-link.less
@@ -2,7 +2,7 @@
 
   font-feature-settings: 'ornm';
 
-  color: #ffffff;
+  color: var(--theme-background);
   text-decoration: none;
 
   font-weight: var(--font-weight-normal);
@@ -11,11 +11,11 @@
 }
 
 :hover > .direct-link {
-  color: @palette-dark-grey;
+  color: var(--theme-gs-300);
 }
 
 .direct-link:hover {
-  color: @palette-black;
+  color: var(--theme-stroke);
 }
 
 @media print {
