--- a/src/style/_elements.links.less
+++ b/src/style/_elements.links.less
@@ -2,12 +2,12 @@ a {
   &:link, &:visited {
     font-family: var(--display-font);
     font-weight: var(--font-weight-bold);
-    color: @palette-primary-dark;
+    color: var(--theme-primary-700);
     text-decoration: none;
   }
 
   &:hover {
-    color: @palette-dark-grey;
+    color: var(--theme-gs-300);
   }
 
   @media print {
