--- a/src/style/_elements.small-links.less
+++ b/src/style/_elements.small-links.less
@@ -1,11 +1,11 @@
 small a {
 
   &:link, &:visited {
-    color: @palette-dark-grey;
+    color: var(--theme-gs-300);
   }
 
   &:hover {
-    color: @palette-black;
+    color: var(--theme-stroke);
   }
 
 }
