--- a/src/style/main.less
+++ b/src/style/main.less
@@ -1,4 +1,3 @@
-@import '_settings.colors.less';
 @import '_settings.sizes.less';
 
 @import '_generic.reset.less';
@@ -6,6 +5,7 @@
 @import '_generic.typography.less';
 @import '_generic.shared.less';
 @import '_generic.layout.less';
+@import '_generic.colors.less';
 
 @import '_elements.headings.less';
 @import '_elements.headings-direct-link.less';
