--- a/src/style/_elements.blockquote.less
+++ b/src/style/_elements.blockquote.less
@@ -8,8 +8,8 @@ blockquote {
 
   border-left: 1px solid;
   border-right: 1px solid;
-  border-color: @palette-dark-grey;
-  background-color: @palette-light-grey;
+  border-color: var(--theme-gs-300);
+  background-color: var(--theme-gs-700);
 
   padding-top: 0.8rem;
   padding-bottom: 1rem;
