--- a/src/style/_objects.header.less
+++ b/src/style/_objects.header.less
@@ -12,7 +12,7 @@
 
   hyphens: none;
 
-  background-color: @palette-black;
+  background-color: var(--theme-alt-background);
 
   @media print {
     justify-content: flex-end;
@@ -33,11 +33,11 @@
 .header__decor-wrapper--after {
   height: 30vmin;
 
-  background-color: @palette-black;
+  background-color: var(--theme-alt-background);
 }
 
 .header__wave-decor {
-  fill: @palette-primary-light;
+  fill: var(--theme-alt-primary);
 
   width: 50em;
   min-width: 100%;
@@ -53,7 +53,7 @@
 }
 
 .header__wave-decor--after {
-  fill: @palette-white;
+  fill: var(--theme-alt-stroke);
 
   height: 100%;
 
@@ -75,7 +75,7 @@
   width: 40vmax;
   height: auto;
 
-  fill: #ec8686;
+  fill: var(--theme-alt-primary);
   transform: translate(-5vw, 5vh) rotate(-42deg);
 
   filter: drop-shadow(0.05em 0.1em 0.15em rgba(0, 0, 0, 0.3));
@@ -95,7 +95,7 @@
 
   padding: @header-padding;
 
-  color: @palette-white;
+  color: var(--theme-alt-stroke);
 
   font-variant-ligatures: discretionary-ligatures;
 }
@@ -110,7 +110,7 @@
 
   text-align: end;
 
-  text-shadow: 0.02em 0.02em @palette-primary-light, 0.02em 0.04em 0.07em rgba(0, 0, 0, 0.3);
+  text-shadow: 0.02em 0.02em var(--theme-alt-primary), 0.02em 0.04em 0.07em rgba(0, 0, 0, 0.3);
 
 }
 
@@ -143,7 +143,7 @@
     width: 40vmax;
     height: auto;
 
-    fill: #ec8686;
+    fill: var(--theme-alt-primary);
     transform: translate(-20%, 5vh) rotate(42deg);
   }
 }
