--- a/src/style/_objects.subheadings.less
+++ b/src/style/_objects.subheadings.less
@@ -2,5 +2,5 @@
   font-size: var(--font-size-xs);
   font-family: var(--display-font);
   font-variant: small-caps;
-  color: #888;
+  color: var(--theme-gs-300);
 }
