--- a/src/style/_elements.images.less
+++ b/src/style/_elements.images.less
@@ -5,6 +5,10 @@ img {
 
   max-width: 100%;
   height: auto;
+
+  @media (prefers-color-scheme: dark) {
+    filter: brightness(0.8) contrast(1.2);
+  }
 }
 
 img[src$='.svg'] {
