--- a/src/style/_objects.navigation.less
+++ b/src/style/_objects.navigation.less
@@ -26,9 +26,9 @@
     transition-duration: 0.2s;
     transition-timing-function: ease-in-out;
 
-    color: var(--theme-stroke);
+    color: var(--theme-alt-stroke);
 
-    background-color: var(--theme-primary);
+    background-color: var(--theme-alt-primary);
     border-color: var(--theme-primary-300);
     border-style: solid;
     border-width: 0.15em;
