Avoid licence hyphenation

--- a/src/style/_objects.license.less
+++ b/src/style/_objects.license.less
@@ -9,6 +9,8 @@
 
   right: var(--content-min-margin);
   padding-bottom: var(--content-min-margin);
+
+  hyphens: none;
 }
 
 .license__work-title {
