--- a/src/style/_elements.horizontal-rule.less
+++ b/src/style/_elements.horizontal-rule.less
@@ -19,6 +19,9 @@ hr {
 
     background-color: var(--theme-background);
 
+    position: relative;
+    z-index: 1;
+
   }
 
   &::after {
@@ -33,7 +36,5 @@ hr {
     top: calc(-0.55em);
 
     border-top: 1px solid var(--theme-stroke);
-
-    z-index: -1;
   }
 }
