Improve primary colour usage

--- a/src/style/_elements.links.less
+++ b/src/style/_elements.links.less
@@ -2,7 +2,7 @@ a {
   &:link, &:visited {
     font-family: var(--display-font);
     font-weight: var(--font-weight-bold);
-    color: var(--theme-primary-700);
+    color: var(--theme-primary-hc);
     text-decoration: none;
   }
 
