--- a/src/style/_objects.navigation.less
+++ b/src/style/_objects.navigation.less
@@ -29,7 +29,7 @@
     color: var(--theme-alt-stroke);
 
     background-color: var(--theme-alt-primary);
-    border-color: var(--theme-primary-300);
+    border-color: var(--theme-alt-primary-lc);
     border-style: solid;
     border-width: 0.15em;
     border-top-width: 0;
