Fix horizontal rule styling

--- a/src/style/_elements.horizontal-rule.less
+++ b/src/style/_elements.horizontal-rule.less
@@ -17,6 +17,7 @@ hr {
 
     text-align: center;
 
+    color: var(--theme-stroke);
     background-color: var(--theme-background);
 
     position: relative;
@@ -33,7 +34,7 @@ hr {
     margin: auto;
 
     position: relative;
-    top: calc(-0.525em - 2.5px);
+    top: calc(-0.55em - 2.5px);
 
     height: 5px;
 
