--- a/src/style/_elements.horizontal-rule.less
+++ b/src/style/_elements.horizontal-rule.less
@@ -34,9 +34,10 @@ hr {
     margin: auto;
 
     position: relative;
-    top: calc(-0.55em - 2.5px);
+    top: calc(-0.525em - 0.125em);
+    margin-bottom: -0.25em;
 
-    height: 5px;
+    height: 0.25em;
 
     border-left: 1px solid var(--theme-stroke);
     border-right: 1px solid var(--theme-stroke);
