Remove unnecessary sizes file

--- a/src/style/_generic.typography.less
+++ b/src/style/_generic.typography.less
@@ -1,10 +1,11 @@
 /* Spacing */
 :root {
-  --content-min-margin: @content-min-margin;
-  --content-max-width: @content-max-width;
+  --content-min-margin: 8vw;
+  --content-max-width: 27em;
 
   --content-spacing-l: 2rem;
   --content-spacing: 0.7rem;
+
   --section-spacing: 1.5rem;
 }
 
