Move files to follow fixed names

--- a/src/view/_includes/adventure.njk
+++ b/src/view/_includes/adventure.njk
@@ -1,6 +1,7 @@
 ---
-layout: default.njk
 ---
+
+{% extends 'default.njk' %}
 
 {% block nav %}
   {% if collections[id].length > 1 %}
@@ -14,7 +15,6 @@ layout: default.njk
     </ul>
   {% endif %}
 {% endblock %}
-
 
 {% block main %}
   <article class="article">
