--- a/src/view/campaigns-pagination.njk
+++ b/src/view/campaigns-pagination.njk
@@ -24,7 +24,13 @@ eleventyComputed:
           {% if adventure.data.campaignId == campaign.id %}
             <li class="collection-nav__list-item">
               <a class="card card--link" href="{{ adventure.url }}">
-                <h3 class="card__title">{{ adventure.data.title }}</h2>
+                <h3 class="card__title">
+                  {% if adventure.data.type != adventure.data.title %}
+                    {{ adventure.data.type }}: {{ adventure.data.title }}
+                  {% else %}
+                    {{ adventure.data.title }}
+                  {% endif %}
+                </h3>
                 <p class="card__subtitle">{{ adventure.data.subtitle }}</p>
                 {% if adventure.data.description %}
                   <p class="card__content">{{ adventure.data.description }}</p>
