--- a/src/view/_includes/adventure.njk
+++ b/src/view/_includes/adventure.njk
@@ -3,16 +3,11 @@
 
 {% extends 'default.njk' %}
 
-{% block nav %}
-  {% if collections[id].length > 1 %}
-    <ul class="top-drop__group">
-      {% set adventures = collections[id] %}
-      {%- for i in adventures -%}
-        <li class="top-drop__item">
-          <a class="nav__link nav__link--lesser {{ "nav__link--active" if i.url == page.url }}" href="{{ i.url }}">{{ i.data.type }}</a>
-        </li>
-      {%- endfor -%}
-    </ul>
+{% block subtitle %}
+  {% if index %}
+    {{ campaignName }}: {{ type }} {{ index }}
+  {% else %}
+    {{ campaignName }}: {{ type }}
   {% endif %}
 {% endblock %}
 
